[package]

name = "gfx_gl"
version = "0.6.1"
build = "build.rs"
description = "OpenGL bindings for gfx, based on gl-rs"
homepage = "https://github.com/gfx-rs/gfx_gl"
repository = "https://github.com/gfx-rs/gfx_gl.git"
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]

[lib]
name = "gfx_gl"
path = "src/lib.rs"

[build-dependencies]
gl_generator = "0.14"
